<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardMaxElevation="0dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="10dp"
    android:id="@+id/cvMain"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_permissions_background"
        >
        <View
            android:id="@+id/vTop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.1"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"
            />
        <ImageView
            android:id="@+id/ivWarning"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.13"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/vTop"
            android:src="@drawable/permission_warning_circle"
            android:contentDescription="@string/warning" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ivWarning"
            app:layout_constraintBottom_toTopOf="@+id/vBottom"
            app:layout_constraintStart_toEndOf="@+id/glStart"
            app:layout_constraintWidth_percent="0.7"
            android:textColor="@color/white"
            android:text="@string/permissions_main_text"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.05"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/glEnd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            android:contentDescription="@string/open" />
        <View
            android:id="@+id/vBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>