<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/onboard_1_bcg">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/iv_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        app:layout_constraintDimensionRatio="1.55434783:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/v_center_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="#66FFFFFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        />
    <LinearLayout
        android:id="@+id/ll_benefit_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="@id/iv_card"
        app:layout_constraintEnd_toEndOf="@id/iv_card"
        app:layout_constraintTop_toTopOf="@id/iv_card"
        app:layout_constraintBottom_toTopOf="@id/ll_benefit_2">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/paywall_card_check"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:text="@string/paywall_benefit_1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_benefit_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="@id/iv_card"
        app:layout_constraintEnd_toEndOf="@id/iv_card"
        app:layout_constraintTop_toBottomOf="@id/ll_benefit_1"
        app:layout_constraintBottom_toTopOf="@id/ll_benefit_3">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/paywall_card_check"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:text="@string/paywall_benefit_2"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_benefit_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="@id/iv_card"
        app:layout_constraintEnd_toEndOf="@id/iv_card"
        app:layout_constraintTop_toBottomOf="@id/ll_benefit_2"
        app:layout_constraintBottom_toBottomOf="@id/iv_card">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/paywall_card_check"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:text="@string/paywall_benefit_3"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/onboard_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/v_center_line"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_reestablish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:text="@string/reestablish"
        android:alpha="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:textSize="22dp"
        android:includeFontPadding="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/paywall_title"
        app:layout_constraintTop_toBottomOf="@id/tv_reestablish"
        app:layout_constraintBottom_toTopOf="@id/ll_offers"
        app:layout_constraintStart_toEndOf="@id/v_center_line"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/ll_offers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/tv_btn_continue"
        app:layout_constraintStart_toEndOf="@id/v_center_line"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:id="@+id/ll_offer_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/paywall_1_btn_single">
            <ImageView
                android:id="@+id/iv_offer_single"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/paywall_1_single_check"/>
            <TextView
                android:id="@+id/tv_offer_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#140240"
                android:textSize="16dp"
                android:text="@string/month_btn_title"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_offer_multi_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/paywall_1_btn_multi_selected">
            <ImageView
                android:id="@+id/iv_offer_multi_year"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/paywall_1_multi_check"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_offer_multi_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:text="@string/year_btn_title"/>
                <TextView
                    android:id="@+id/tv_offer_multi_year_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:alpha="0.2"
                    android:text="@string/year_desc"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_offer_multi_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/paywall_1_btn_multi_unselected">
            <ImageView
                android:id="@+id/iv_offer_multi_month"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/paywall_1_multi_check_outline"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_offer_multi_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:text="@string/month_btn_title"/>
                <TextView
                    android:id="@+id/tv_offer_multi_month_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:alpha="0.2"
                    android:text="@string/month_desc"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_offer_single_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="10dp"
        android:textColor="@color/white"
        android:alpha="0.5"
        android:text="@string/month_desc"
        app:layout_constraintTop_toBottomOf="@id/ll_offers"
        app:layout_constraintStart_toStartOf="@id/ll_offers"
        app:layout_constraintEnd_toEndOf="@id/ll_offers"/>
    <TextView
        android:id="@+id/tv_btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_marginBottom="80dp"
        android:textColor="#501455"
        android:textSize="15dp"
        android:text="@string/continue_title"
        android:includeFontPadding="false"
        android:textAllCaps="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/onboard_1_btn"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintStart_toEndOf="@id/v_center_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_btn_continue"
        app:layout_constraintStart_toStartOf="@id/tv_btn_continue"
        app:layout_constraintEnd_toEndOf="@id/tv_btn_continue">
        <View
            android:id="@+id/v_dot_1"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/onboard_1_dot_empty"/>
        <View
            android:id="@+id/v_dot_2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/onboard_1_dot_empty"/>
        <View
            android:id="@+id/v_dot_3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/onboard_1_dot_empty"/>
        <View
            android:id="@+id/v_dot_4"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/onboard_dot_fill"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_links"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10dp"
        android:textColor="@color/white"
        android:text="@string/subscription"
        android:linksClickable="true"
        android:textColorLink="#00D1FF"
        android:alpha="0.3"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>