<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/onboard_1_bcg">
    <ImageView
        android:id="@+id/iv_img"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/onboard_img_1"
        app:layout_constraintDimensionRatio="1.16073969:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/onboard_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/v_center_line"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:includeFontPadding="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/onboard_title_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintStart_toEndOf="@id/v_center_line"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:gravity="center"
        android:textSize="16dp"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:text="@string/onboard_desc_1"
        android:linksClickable="true"
        android:textColorLink="#00D1FF"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/tv_btn_continue"
        app:layout_constraintStart_toEndOf="@id/v_center_line"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_marginBottom="80dp"
        android:textAlignment="center"
        android:textColor="#501455"
        android:textSize="15dp"
        android:text="@string/continue_title"
        android:includeFontPadding="false"
        android:textAllCaps="true"
        android:background="@drawable/onboard_1_btn"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintStart_toEndOf="@id/v_center_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_btn_continue"
        app:layout_constraintStart_toStartOf="@id/tv_btn_continue"
        app:layout_constraintEnd_toEndOf="@id/tv_btn_continue">
        <View
            android:id="@+id/v_dot_1"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>
        <View
            android:id="@+id/v_dot_2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>
        <View
            android:id="@+id/v_dot_3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>
        <View
            android:id="@+id/v_dot_4"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>